monitoring/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - Grafana'
spec:
  ingressClassName: nginx
  rules:
  - host: km01.itversity.com
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /grafana(/|$)(.*)
        backend:
          service:
            name: grafana
            port:
              number: 3000
